kubernetes/apps/prod/htz-fsn1/netops/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: netops
  namespace: netops
spec:
  gatewayClassName: envoy
  infrastructure:
    parametersRef:
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: netops-envoy
  listeners:
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.father.fsn.htz.yucca.futo.network"
      allowedRoutes:
        namespaces:
          from: Same
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: netops-wildcard-tls
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.father.fsn.htz.yucca.futo.network"
      allowedRoutes:
        namespaces:
          from: Same
